bk_ida/gccida/c0/combine_instructions
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:972:4: error: expected ';' after expression
rtx link; // [rsp+18h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:974:4: error: expected ';' after expression
rtx nextlinks; // [rsp+28h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:974:5: error: use of undeclared identifier 'nextlinks'; did you mean 'next_insn'?
rtx nextlinks; // [rsp+28h] [rbp-38h] 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:975:4: error: expected ';' after expression
rtx links; // [rsp+30h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:975:5: error: use of undeclared identifier 'links'; did you mean 'link'?
rtx links; // [rsp+30h] [rbp-30h] 
    ^~~~~
    link
/usr/include/unistd.h:792:12: note: 'link' declared here
extern int link (const char *__from, const char *__to)
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:977:4: error: expected ';' after expression
rtx next; // [rsp+40h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:977:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+40h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:978:4: error: expected ';' after expression
rtx insn; // [rsp+48h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:978:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+48h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:980:4: error: expected ';' after expression
rtx fa; // [rsp+58h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:980:5: error: use of undeclared identifier 'fa'
rtx fa; // [rsp+58h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:982:1: error: use of undeclared identifier 'fa'
fa = f; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:992:25: error: expected expression
reg_last_death = ( rtx *)xmalloc( 8LL * nregs); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:993:23: error: expected expression
reg_last_set = ( rtx *)xmalloc( 8LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:994:29: error: expected expression
reg_last_set_value = ( rtx *)xmalloc( 8LL * nregs); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:998:37: error: expected expression
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:998:23: error: use of undeclared identifier 'machine_mode'
reg_last_set_mode = ( machine_mode *)xmalloc( 4LL * nregs); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:1003:1: error: use of undeclared identifier 'insn'
insn = f; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/combine.c:1005:9: error: use of undeclared identifier 'insn'
while ( insn ) 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_instructions/src/obj/combine.o] Error 1
